--- a/src/App.css
+++ b/src/App.css
@@ -34,11 +34,11 @@
     font-size: 100px;
   }
   
-  .sign-up {
+  /* .sign-up {
     background-image: url('img-8.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
-  }
+  } */
